--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barcodelookup",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Light module for looking up barcodes using barcodelookup.",
   "main": "index.js",
   "scripts": {
@@ -16,8 +16,7 @@
     "prettier": "^1.17.0"
   },
   "dependencies": {
-    "node-fetch": "^2.5.0",
-    "xmlhttprequest": "^1.8.0"
+    "node-fetch": "^2.5.0"
   },
   "prettier": {
     "parser": "flow",
