--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "prettier": "^1.17.0"
   },
   "dependencies": {
-    "node-fetch": "^2.5.0",
-    "xmlhttprequest": "^1.8.0"
+    "node-fetch": "^2.5.0"
   },
   "prettier": {
     "parser": "flow",
